cdbs (0.4.52) UNRELEASED; urgency=low

  * Bump python-central build-dependency to >= 0.6 in python-distutils class.

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 12 Mar 2008 13:28:25 +0100

cdbs (0.4.51) unstable; urgency=low

  * Changed test/recursive.sh to use bash, like all other tests, since it
    doesn't work with dash (closes: #459052)
  * Changed CMAKE_C_COMPILER to CMAKE_C_COMPILER:FILEPATH and
    CMAKE_CXX_COMPILER to CMAKE_CXX_COMPILER:FILEPATH (cmake.mk)
    (closes: #450901)
  * Added support for debhelper level 6 (debhelper.mk):
    - Fixed dbg package handling (patch by Modestas Vainius) (closes: #462130)
    - Support level 6 in CDBS_BUILD_DEPENDS
  * Updated standards version

 -- Peter Eisentraut <petere@debian.org>  Fri, 01 Feb 2008 19:24:29 +0100

cdbs (0.4.50) unstable; urgency=low

  * Made qmake class observe nostrip option (qmake.mk) (closes: #438417)
  * Call make as $(MAKE) (qmake.mk)
  * Added cmake class (original patch by Fathi Boudra) (closes: #377524)
  * Documented cases where setting DEB_DESTDIR manually could be necessary
    (closes: #438372)
  * Use unversioned interpreter for default Python version
    (python-distutils.mk) (closes: #377964)
  * Use dh_testroot instead of custom rule when debhelper is used
    (buildcore.mk) (closes: #416018)
  * Documented variables DEB_AUTO_UPDATE_AUTOCONF, DEB_AUTO_UPDATE_AUTOMAKE,
    DEB_AUTO_UPDATE_LIBTOOL; thanks to Steve M. Robbins for the research
    (closes: #439750)
  * Use dh_listpackages instead of custom list-packages script when debhelper
    is used.  Since this requires a recent version of debhelper, debhelper is
    now a dependency of cdbs.  (buildcore.mk, permodule-vars.mk)
    (closes: #405413, #433862)
  * Added possibility to list files that are not installed in
    debian/not-installed (utils.mk) (closes: #423394)
  * Replaced uses of "#" in make $(warning) function argument, because it
    misbehaves in some versions of make (python-distutils.mk)
    (closes: #439915)