@@ -97,8 +97,8 @@ $(addsuffix .zip,$(_cdbs_tarball_stamp_base)):
 
 cleanbuilddir::
 	rm -rf $(_cdbs_tarball_dir)
-# Ignore errors from this.  These stamps may not exist yet.
-	-rm $(_cdbs_tarball_stamps)
-	-rm debian/stamp-patch-* 2>/dev/null
+	rm -f $(_cdbs_tarball_stamps)
+	rm -f debian/stamp-patch-*
+	rm -rf debian/patched
 
 endif
